SUBDIRS = src

EXTRA_DIST = NEWS AUTHORS COPYING ChangeLog INSTALL LICENSE README README.md \
             TODO \
             khunphan.sln khunphan.vcxproj khunphan.vcxproj.filters \
             khunphan.vcxproj.user \
             StateDiagram.fig StateDiagram.pdf \
             khunphan.lsm \
             src/khunphan.astyle \
             build

AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip

