dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
dnl                       modified by Walter Tasin (tasin@kdevelop.org)
dnl                       for c++ console applications

dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.

dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.

dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(khunphan,0.55)

dnl almost the same like KDE_SET_PEFIX but the path is /usr/local
dnl
unset CDPATH
dnl make /usr/local the default for the installation
AC_PREFIX_DEFAULT(/usr/local)

if test "x$prefix" = "xNONE"; then
  prefix=$ac_default_prefix
  ac_configure_args="$ac_configure_args --prefix $prefix"
fi
KDE_FAST_CONFIGURE
KDE_CONF_FILES

dnl without this order in this file, automake will be confused!
dnl
AM_CONFIG_HEADER(khunphan/config.h)

dnl checks for programs.
dnl first check for c/c++ compilers
AC_CHECK_COMPILERS

dnl CXXFLAGS="$NOOPT_CXXFLAGS" dnl __kdevelop[noopt]__
dnl CFLAGS="$NOOPT_CFLAGS" dnl __kdevelop[noopt]__
CXXFLAGS="$CXXFLAGS $USE_EXCEPTIONS" dnl __kdevelop[exc]__

dnl create only shared libtool-libraries
AC_ENABLE_SHARED(yes)

dnl set the following to yes, if you want to create static
dnl libtool-libraries, too.
AC_ENABLE_STATIC(no)

dnl create a working libtool-script
KDE_PROG_LIBTOOL

dnl activate the next macro call for DLOPEN tests and setting LIBDL
dnl   (n.b. KDE_MISC_TESTS does the same to you, so use either this or the next one)
dnl KDE_CHECK_DLOPEN

dnl activate the next macro call for some additional tests
dnl   (compat, crypt, socket, nsl, dlopen, ...)
dnl KDE_MISC_TESTS dnl __kdevelop__

dnl KDE_NEED_FLEX dnl __kdevelop__
dnl AC_PROG_YACC dnl __kdevelop__

dnl Check for SDL 
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, 
         :,
         AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]) 
) 
dnl Check for SDL_mixer
AC_CHECK_LIB(SDL_mixer, 
       main, 
       LIBS="$LIBS -lSDL_mixer", 
       AC_MSG_ERROR([*** SDL_mixer library not found!]) 
)
 
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS" 
LIBS="$LIBS $SDL_LIBS"

KDE_CHECK_EXTRA_LIBS
all_libraries="$all_libraries $USER_LDFLAGS"
all_includes="$all_includes $USER_INCLUDES"
AC_SUBST(all_includes)
AC_SUBST(all_libraries)

AC_SUBST(AUTODIRS)

KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ admin/Makefile ])
AC_CONFIG_FILES([ khunphan/Makefile ])
AC_CONFIG_FILES([ khunphan/Music/Makefile ])
AC_CONFIG_FILES([ khunphan/Sounds/Makefile ])
AC_CONFIG_FILES([ khunphan/Sounds/bubbles/Makefile ])
AC_CONFIG_FILES([ khunphan/Sounds/marble/Makefile ])
AC_CONFIG_FILES([ khunphan/Sounds/metal/Makefile ])
AC_CONFIG_FILES([ khunphan/Sounds/painting/Makefile ])
AC_CONFIG_FILES([ khunphan/Sounds/rock/Makefile ])
AC_CONFIG_FILES([ khunphan/Sounds/smily/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/bubbles/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/marble/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/metal/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/painting/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/rock/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/smily/Makefile ])
AC_CONFIG_FILES([ khunphan/Textures/wood/Makefile ])
AC_CONFIG_FILES([ khunphan/docs/Makefile ])
AC_CONFIG_FILES([ khunphan/docs/en/Makefile ])
AC_CONFIG_FILES([ khunphan/locale/Makefile ])
AC_OUTPUT
