####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = Cymbals.ogg Earth.ogg Mystery.ogg 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Music/
	$(INSTALL_DATA) $(srcdir)/Cymbals.ogg $(datadir)/khunphan/Music/Cymbals.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Music/
	$(INSTALL_DATA) $(srcdir)/Earth.ogg $(datadir)/khunphan/Music/Earth.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Music/
	$(INSTALL_DATA) $(srcdir)/Mystery.ogg $(datadir)/khunphan/Music/Mystery.ogg

uninstall-local:
	-rm -f $(datadir)/khunphan/Music/Cymbals.ogg
	-rm -f $(datadir)/khunphan/Music/Earth.ogg
	-rm -f $(datadir)/khunphan/Music/Mystery.ogg

####### kdevelop will overwrite this part!!! (end)############
