####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = bubbles marble metal painting rock smily 

EXTRA_DIST = changesetting.ogg gamesolved.ogg movetoken.ogg opengame.ogg openmenu.ogg quitgame.ogg tutorialnext.ogg 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/
	$(INSTALL_DATA) $(srcdir)/changesetting.ogg $(datadir)/khunphan/Sounds/changesetting.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/
	$(INSTALL_DATA) $(srcdir)/gamesolved.ogg $(datadir)/khunphan/Sounds/gamesolved.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/
	$(INSTALL_DATA) $(srcdir)/movetoken.ogg $(datadir)/khunphan/Sounds/movetoken.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/
	$(INSTALL_DATA) $(srcdir)/opengame.ogg $(datadir)/khunphan/Sounds/opengame.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/
	$(INSTALL_DATA) $(srcdir)/openmenu.ogg $(datadir)/khunphan/Sounds/openmenu.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/
	$(INSTALL_DATA) $(srcdir)/quitgame.ogg $(datadir)/khunphan/Sounds/quitgame.ogg
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/
	$(INSTALL_DATA) $(srcdir)/tutorialnext.ogg $(datadir)/khunphan/Sounds/tutorialnext.ogg

uninstall-local:
	-rm -f $(datadir)/khunphan/Sounds/changesetting.ogg
	-rm -f $(datadir)/khunphan/Sounds/gamesolved.ogg
	-rm -f $(datadir)/khunphan/Sounds/movetoken.ogg
	-rm -f $(datadir)/khunphan/Sounds/opengame.ogg
	-rm -f $(datadir)/khunphan/Sounds/openmenu.ogg
	-rm -f $(datadir)/khunphan/Sounds/quitgame.ogg
	-rm -f $(datadir)/khunphan/Sounds/tutorialnext.ogg

####### kdevelop will overwrite this part!!! (end)############
