####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = 900.lang 901.lang 999.lang 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/locale/
	$(INSTALL_DATA) $(srcdir)/900.lang $(datadir)/khunphan/locale/900.lang
	$(mkinstalldirs) $(datadir)/khunphan/locale/
	$(INSTALL_DATA) $(srcdir)/901.lang $(datadir)/khunphan/locale/901.lang
	$(mkinstalldirs) $(datadir)/khunphan/locale/
	$(INSTALL_DATA) $(srcdir)/999.lang $(datadir)/khunphan/locale/999.lang

uninstall-local:
	-rm -f $(datadir)/khunphan/locale/900.lang
	-rm -f $(datadir)/khunphan/locale/901.lang
	-rm -f $(datadir)/khunphan/locale/999.lang

####### kdevelop will overwrite this part!!! (end)############
