####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = movetoken.ogg 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/bubbles/
	$(INSTALL_DATA) $(srcdir)/movetoken.ogg $(datadir)/khunphan/Sounds/bubbles/movetoken.ogg

uninstall-local:
	-rm -f $(datadir)/khunphan/Sounds/bubbles/movetoken.ogg

####### kdevelop will overwrite this part!!! (end)############
