####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = movetoken.ogg 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/marble/
	$(INSTALL_DATA) $(srcdir)/movetoken.ogg $(datadir)/khunphan/Sounds/marble/movetoken.ogg

uninstall-local:
	-rm -f $(datadir)/khunphan/Sounds/marble/movetoken.ogg

####### kdevelop will overwrite this part!!! (end)############
