####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = movetoken.ogg 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/metal/
	$(INSTALL_DATA) $(srcdir)/movetoken.ogg $(datadir)/khunphan/Sounds/metal/movetoken.ogg

uninstall-local:
	-rm -f $(datadir)/khunphan/Sounds/metal/movetoken.ogg

####### kdevelop will overwrite this part!!! (end)############
