####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = movetoken.ogg 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/painting/
	$(INSTALL_DATA) $(srcdir)/movetoken.ogg $(datadir)/khunphan/Sounds/painting/movetoken.ogg

uninstall-local:
	-rm -f $(datadir)/khunphan/Sounds/painting/movetoken.ogg

####### kdevelop will overwrite this part!!! (end)############
