####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = movetoken.ogg 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Sounds/smily/
	$(INSTALL_DATA) $(srcdir)/movetoken.ogg $(datadir)/khunphan/Sounds/smily/movetoken.ogg

uninstall-local:
	-rm -f $(datadir)/khunphan/Sounds/smily/movetoken.ogg

####### kdevelop will overwrite this part!!! (end)############
