####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = board.png texture1.png texture2.png texture3.png 

install-data-local:
	$(mkinstalldirs) $(datadir)/khunphan/Textures/bubbles/
	$(INSTALL_DATA) $(srcdir)/board.png $(datadir)/khunphan/Textures/bubbles/board.png
	$(mkinstalldirs) $(datadir)/khunphan/Textures/bubbles/
	$(INSTALL_DATA) $(srcdir)/texture1.png $(datadir)/khunphan/Textures/bubbles/texture1.png
	$(mkinstalldirs) $(datadir)/khunphan/Textures/bubbles/
	$(INSTALL_DATA) $(srcdir)/texture2.png $(datadir)/khunphan/Textures/bubbles/texture2.png
	$(mkinstalldirs) $(datadir)/khunphan/Textures/bubbles/
	$(INSTALL_DATA) $(srcdir)/texture3.png $(datadir)/khunphan/Textures/bubbles/texture3.png

uninstall-local:
	-rm -f $(datadir)/khunphan/Textures/bubbles/board.png
	-rm -f $(datadir)/khunphan/Textures/bubbles/texture1.png
	-rm -f $(datadir)/khunphan/Textures/bubbles/texture2.png
	-rm -f $(datadir)/khunphan/Textures/bubbles/texture3.png

####### kdevelop will overwrite this part!!! (end)############
